# openreads-to-storygraph

./: .prepare_deploy  README.md  flake.nix  openreads-to-storygraph.cabal  setgitversion
.github/workflows/: build.yml
app/: BookEntry.hs  GoodreadsEntry.hs  Main.hs  OpenreadsEntry.hs
