cabal-version:  3.4
name:           openreads-to-storygraph
version:        1.0.0
description:    Please see the README on GitHub at <https://github.com/pmiddend/openreads-to-storygraph#readme>
homepage:       https://github.com/pmiddend/openreads-to-storygraph#readme
bug-reports:    https://github.com/pmiddend/openreads-to-storygraph/issues
author:         Philipp Middendorf
maintainer:     pmidden@mailbox.org
copyright:      2025 Philipp Middendorf
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/pmiddend/openreads-to-storygraph

executable openreads-to-storygraph
  main-is: Main.hs
  ghc-options: -Weverything -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-deriving-strategies -Wno-all-missed-specialisations -Wno-monomorphism-restriction -Wno-safe -Wno-missing-local-signatures -Wno-prepositive-qualified-module -threaded -rtsopts -with-rtsopts=-N -Wno-missing-kind-signatures -Wno-missed-specializations
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , text
    , aeson
